--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "type": "module",
   "dependencies": {
-    "d3": "^7.8.5"
+    "d3": "^7.8.5",
+    "hexo-katexify": "^1.1.0",
+    "katexify": "^0.1.0"
   }
 }
