--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "d3": "^7.8.5",
     "hexo-katexify": "^1.1.0",
-    "katexify": "^0.1.0"
+    "katexify": "^0.1.0",
+    "layercake": "^8.2.0"
   }
 }
